--- a/src/pages/madal-pages/style-modal/modal-mini.css
+++ b/src/pages/madal-pages/style-modal/modal-mini.css
@@ -38,15 +38,17 @@
   
 }
 .view {
+  border: solid 1px black;
   margin-left: 50px;
   /* background-image: url(https://store.storeimages.cdn-apple.com/4668/as-images.apple.com/is/iphone-12-mini-white-select-2020?wid=470&hei=556&fmt=png-alpha&.v=1604343707000);
   background-position: -85px -130px;
   background-repeat: no-repeat; */
-  width: 300px;
+  width: 400px;
   height: 400px;
 }
 .colors {
-  margin-left: 30px;
+  border: solid 1px red;
+  margin-left: 60px;
   
 }
 .buttons {
@@ -62,7 +64,7 @@
   background: transparent;
   width: 150px;
   height: 100px;
-  
+  margin: 10px;
 
 }
 .button-color:active, .button-color:focus {
@@ -76,13 +78,4 @@
   border-radius: 50%;
   background-color: #F0ECEA;
 }
-.top{
-  justify-content: space-between;
-  display: flex;
-}
-.bot {
-  justify-content: space-between;
-  margin-top: 10px;
-  display: flex;
-  
-}
+
